cluster/03-ingress-nginx/kustomization/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws-server
spec:
  type: ClusterIP
  selector:
    app: ws-server
  ports:
  - port: 80
    targetPort: 9001
